--- a/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -388,7 +388,8 @@
     <script src="~/Scripts/jquery.js"></script>
     <script src="~/Scripts/jquery.validation.js"></script>
     <script src="~/Scripts/jquery.validation.unobtrusive.js"></script>
-
+    <!--================-->
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
 </body>
 
 </html>
