--- a/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Staff/Edit.cshtml
@@ -59,18 +59,18 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TaiKhoanNVs.FirstOrDefault().TenTaiKhoan, "TenTaiKhoan", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.First().TenTaiKhoan, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TaiKhoanNVs.FirstOrDefault().TenTaiKhoan, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.FirstOrDefault().TenTaiKhoan, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.TaiKhoanNVs.First().MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.TaiKhoanNVs.FirstOrDefault().MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.TaiKhoanNVs.First().MatKhau, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.First().MatKhau, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.TaiKhoanNVs.FirstOrDefault().MatKhau, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TaiKhoanNVs.FirstOrDefault().MatKhau, "", new { @class = "text-danger" })
         </div>
     </div>
 
