--- a/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
+++ b/HotelManagement/Areas/Admin/Views/RegistrationForm/Create.cshtml
@@ -49,7 +49,7 @@
             <div class="room-container">
                 <div class="booking-room col-12 col-lg-12">
                     <i class="fa-solid fa-x close-btn"></i>
-                    @*<form id="booking-form">
+                    <form id="booking-form">
                             <h2>Add room</h2>
                             <div class="form-group">
                                 <label class="control-label">Room Type</label>
@@ -67,7 +67,7 @@
                                 <span class="form-message"></span>
                             </div>
                             <p class="submit-form-btn submit-room">Submit</p>
-                        </form>*@
+                        </form>
                 </div>
             </div>
         </div>
