--- a/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
+++ b/HotelManagement/Areas/Admin/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalRooms</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                            <i class="fas fa-hotel fa-2x text-gray-300"></i>
                         </div>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                Earnings (Annual)
+                                Earnings ( VNĐ )
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalRevenue</div>
                         </div>
@@ -78,7 +78,7 @@
                             <!--</div>-->
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                            <i class="fas fa-building fa-2x text-gray-300"></i>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalEmployees</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                            <i class="fas fa-user fa-2x text-gray-300"></i>
                         </div>
                     </div>
                 </div>
@@ -167,13 +167,22 @@
                     </div>
                     <div class="mt-4 text-center small">
                         <span class="mr-2">
-                            <i class="fas fa-circle text-primary"></i> Direct
+                            <i class="fas fa-circle" style="color: #4e73df;"></i> LP001
                         </span>
                         <span class="mr-2">
-                            <i class="fas fa-circle text-success"></i> Social
+                            <i class="fas fa-circle" style="color: #1cc88a;"></i> LP002
                         </span>
                         <span class="mr-2">
-                            <i class="fas fa-circle text-info"></i> Referral
+                            <i class="fas fa-circle" style="color: #36b9cc;"></i> LP003
+                        </span>
+                        <span class="mr-2">
+                            <i class="fas fa-circle" style="color: #ffa726;"></i> LP004
+                        </span>
+                        <span class="mr-2">
+                            <i class="fas fa-circle" style="color: #f44336;"></i> LP005
+                        </span>
+                        <span class="mr-2">
+                            <i class="fas fa-circle" style="color: #8e24aa;"></i> LP006
                         </span>
                     </div>
                 </div>
